[tool.poetry]
name = "repl_python3_beta_FileToLinkBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.0"
aiohttp = "^3.7.4"
APScheduler = "^3.7.0"
Pyrogram = "^1.2.9"
TgCrypto = "^1.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
